# Rust-in_Action_my_notes

./: README.md
code/ch01/ch1_workspace/: Cargo.toml
code/ch01/ch1_workspace/members/ch1-animals-specialization/: Cargo.toml
code/ch01/ch1_workspace/members/ch1-animals-specialization/src/: main.rs
code/ch01/ch1_workspace/members/ch1-animals-specialization2/: Cargo.toml
code/ch01/ch1_workspace/members/ch1-animals-specialization2/src/: main.rs
code/ch01/ch1_workspace/members/ch1-animals-tuple-structs/: Cargo.toml
code/ch01/ch1_workspace/members/ch1-animals-tuple-structs/src/: main.rs
code/ch01/ch1_workspace/members/ch1-escape-html/: Cargo.toml
code/ch01/ch1_workspace/members/ch1-escape-html/src/: main.rs
code/ch01/ch1_workspace/members/ch1-hashmap-hashset/: Cargo.toml
code/ch01/ch1_workspace/members/ch1-hashmap-hashset/src/: lib.rs  main.rs
code/ch01/ch1_workspace/members/ch1-hello2/: Cargo.toml
code/ch01/ch1_workspace/members/ch1-hello2/src/: lib.rs  main.rs
code/ch01/ch1_workspace/members/ch1-save-user-data/: Cargo.toml
code/ch01/ch1_workspace/members/ch1-save-user-data/src/: lib.rs  main.rs
code/ch01/ch1_workspace/members/ch1-word-counts/: Cargo.toml
code/ch01/ch1_workspace/members/ch1-word-counts/src/: lib.rs  main.rs
code/ch01/ex09_time-api/: Cargo.toml
code/ch02/ch2_workspace/: Cargo.toml
code/ch02/ch2_workspace/members/ch2-3arrays/src/: main.rs
code/ch02/ch2_workspace/members/ch2-add-floats/: Cargo.toml
code/ch02/ch2_workspace/members/ch2-add-floats/src/: main.rs
code/ch02/ch2_workspace/members/ch2-add-with-lifetimers/: Cargo.toml
code/ch02/ch2_workspace/members/ch2-add-with-lifetimers/src/: lib.rs  main.rs
code/ch02/ch2_workspace/members/ch2-expressions/: Cargo.toml
code/ch02/ch2_workspace/members/ch2-expressions/src/: lib.rs  main.rs
code/ch02/ch2_workspace/members/ch2-first-steps/src/: lib.rs  main.rs
code/ch02/ch2_workspace/members/ch2-for/src/: main.rs
code/ch02/ch2_workspace/members/ch2-grep-lite/: Cargo.toml  README.md
code/ch02/ch2_workspace/members/ch2-grep-lite/src/: main.rs
code/ch02/ch2_workspace/members/ch2-grep-lite2/: Cargo.toml  README.md
code/ch02/ch2_workspace/members/ch2-grep-lite2/src/: main.rs
code/ch02/ch2_workspace/members/ch2-grep-lite3/: Cargo.toml  README.md
code/ch02/ch2_workspace/members/ch2-grep-lite3/src/: lib.rs  main.rs
code/ch02/ch2_workspace/members/ch2-intro-to-numbers/src/: main.rs
code/ch02/ch2_workspace/members/ch2-introduction-vec/: Cargo.toml
code/ch02/ch2_workspace/members/ch2-mandelbrot/: Cargo.toml
code/ch02/ch2_workspace/members/ch2-mandelbrot/src/: main.rs
code/ch02/ch2_workspace/members/ch2-match-needles/src/: main.rs
code/ch02/ch2_workspace/members/ch2-non-base2/: Cargo.toml
code/ch02/ch2_workspace/members/ch2-non-base2/src/: lib.rs  main.rs
code/ch02/ch2_workspace/members/ch2-pointer/: Cargo.toml
code/ch02/ch2_workspace/members/ch2-pointer/src/: main.rs
code/ch02/ch2_workspace/members/ch2-read-file/: Cargo.toml  readme.md
code/ch02/ch2_workspace/members/ch2-read-file/src/: main.rs
code/ch02/ch2_workspace/members/ch2-simple-with-enumerate/src/: main.rs
code/ch02/ch2_workspace/members/ch2-simple-with-linenums/src/: main.rs
code/ch02/ch2_workspace/members/ch2-str-simple-pattern/src/: main.rs
code/ch02/ch2_workspace/members/ch2-while-true-increment/: Cargo.toml
code/ch02/ch2_workspace/members/ch2-while-true-increment/src/: main.rs
code/ch02/ch2_workspace/members/ch2_float/: Cargo.toml
code/ch02/ch2_workspace/members/ch2_float/src/: main.rs
code/ch02/ch2_workspace/members/ch2_nan/: Cargo.toml
code/ch02/ch2_workspace/members/ch2_nan/src/: main.rs
code/ch02/ch2_workspace/members/ch2_try_into/: Cargo.toml
code/ch02/ch2_workspace/members/ch2_try_into/src/: lib.rs  main.rs
code/ch03/ch3_workspace/: Cargo.toml
code/ch03/ch3_workspace/src/members/ch2-file-results/: Cargo.toml
code/ch03/ch3_workspace/src/members/ch2-global-error/: Cargo.toml
code/ch03/ch3_workspace/src/members/ch3-adding-pub-to-file/: Cargo.toml
code/ch04/ch4_workspace/: Cargo.toml
code/ch04/ch4_workspace/members/ch4-absadd/: Cargo.toml
code/ch04/ch4_workspace/members/ch4-check-sats-clone-and-copy-traits/: Cargo.toml
code/ch04/ch4_workspace/members/ch4-check-sats-with-copy-trait/: Cargo.toml
code/ch04/ch4_workspace/members/ch4-endianness/: Cargo.toml
code/ch04/ch4_workspace/members/ch4-rc-groundstation/: Cargo.toml
code/ch04/ch4_workspace/members/cubesat-1/: Cargo.toml
code/ch06/ch6_workspace/: Cargo.toml
code/ch06/ch6_workspace/members/ch6-create-destroy-objects-in-a-heap/: Cargo.toml
code/ch06/ch6_workspace/members/ch6-get-address/: Cargo.toml
code/ch06/ch6_workspace/members/ch6-pointer-imitation/: Cargo.toml
code/ch06/ch6_workspace/members/ch6-print-lines/: Cargo.toml
code/ch06/ch6_workspace/members/ch6-print-lines2/: Cargo.toml
code/ch06/ch6_workspace/members/ch6-using-smart-pointers/: Cargo.toml
code/ch06/ch6_workspace/members/ch6-winapi/: Cargo.toml
(+84 files in other folders)
