workspace = { members = ["src/members/ch2-file-results", "src/members/ch2-global-error", "src/members/ch3-adding-pub-to-file", "src/members/ch3-anystring-macro", "src/members/ch3-defining-files", "src/members/ch3-defining-files-neatly", "src/members/ch3-error-1", "src/members/ch3-file-doced", "src/members/ch3-file-states", "src/members/ch3-files-with-modes", "src/members/ch3-implementing-display", "src/members/ch3-noarg-macro", "src/members/ch3-not-quite-file-1", "src/members/ch3-not-quite-file-2", "src/members/ch3-not-quite-file-3", "src/members/ch3-not-quite-file-4", "src/members/ch3-parse-log", "src/members/ch3-string-macro"] }
[package]
name = "ch3_workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
